# docs/source/openapi.yaml
@@ -85,9 +85,6 @@ paths:
   "/quiz":
     get:
       summary: Get Quiz
-      description: "Quiz frontend route. Fetches first pokemon\nArgs:\n    request
-        (Request): \n\nReturns:\n    HTMLResponse: Quiz page to be displayed in the
-        browser."
       operationId: get_quiz_quiz_get
       responses:
         '200':
@@ -96,36 +93,6 @@ paths:
             text/html:
               schema:
                 type: string
-    post:
-      summary: Post Quiz
-      description: |-
-        Fetches a new Quiz question, and validates existing ones.
-
-        Args:
-            request (Request): request (form data from the ui form)
-            guess (str, optional): String. Defaults to Form(...).
-
-        Returns:
-            JSONResponse: Evaluated response if the guess was correct (and the message to be displayed)
-      operationId: post_quiz_quiz_post
-      requestBody:
-        content:
-          application/x-www-form-urlencoded:
-            schema:
-              "$ref": "#/components/schemas/Body_post_quiz_quiz_post"
-        required: true
-      responses:
-        '200':
-          description: Successful Response
-          content:
-            application/json:
-              schema: {}
-        '422':
-          description: Validation Error
-          content:
-            application/json:
-              schema:
-                "$ref": "#/components/schemas/HTTPValidationError"
   "/api/highscores":
     get:
       summary: Get All Highscores
@@ -139,37 +106,44 @@ paths:
         Returns:
             _type_: _description_
       operationId: get_all_highscores_api_highscores_get
+      parameters:
+      - name: access_token
+        in: cookie
+        required: false
+        schema:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Access Token
       responses:
         '200':
           description: Successful Response
           content:
             application/json:
               schema:
+                type: array
                 items:
                   "$ref": "#/components/schemas/HighscoreResponse"
-                type: array
                 title: Response Get All Highscores Api Highscores Get
-      security:
-      - OAuth2PasswordBearer: []
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/HTTPValidationError"
   "/api/highscore/{top}":
     get:
       summary: Get Top Highscores Api
       description: |-
-        _summary_
+        Returns the top N highscores. Requires login.
 
         Args:
-            top (int): _description_
-            token (str, optional): _description_. Defaults to Depends(oauth2_scheme).
-
-        Raises:
-            HTTPException: _description_
-            HTTPException: _description_
+            top (int): Number of top scores to return.
+            user (UserInDb): The authenticated user (not used, but required for access).
 
         Returns:
-            _type_: _description_
+            List[HighscoreResponse]: The top N highscore entries.
       operationId: get_top_highscores_api_api_highscore__top__get
-      security:
-      - OAuth2PasswordBearer: []
       parameters:
       - name: top
         in: path
@@ -177,6 +151,14 @@ paths:
         schema:
           type: integer
           title: Top
+      - name: access_token
+        in: cookie
+        required: false
+        schema:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Access Token
       responses:
         '200':
           description: Successful Response
@@ -196,42 +178,40 @@ paths:
   "/api/highscore":
     post:
       summary: Post Highscore
-      description: |-
-        _summary_
-
-        Args:
-            request (Request): _description_
-            token (str, optional): _description_. Defaults to Depends(oauth2_scheme).
-
-        Raises:
-            HTTPException: _description_
-            HTTPException: _description_
-
-        Returns:
-            _type_: _description_
       operationId: post_highscore_api_highscore_post
+      parameters:
+      - name: access_token
+        in: cookie
+        required: false
+        schema:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Access Token
       responses:
         '200':
           description: Successful Response
           content:
             application/json:
               schema: {}
-      security:
-      - OAuth2PasswordBearer: []
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/HTTPValidationError"
   "/api/token":
     post:
       summary: Login
       description: |-
-        Logs user in.
+        This is the API route where the user should log in. It's response contains
+        access and refresh Token, stored on the client in the form of cookies.
 
         Args:
             form_data (OAuth2PasswordRequestForm, optional): form data. Defaults to Depends().
 
         Raises:
             HTTPException: If anything goes wrong, access is denied by default.
-
-        Returns:
-            str: Identification token (JWT).
       operationId: login_api_token_post
       requestBody:
         content:
@@ -244,14 +224,23 @@ paths:
           description: Successful Response
           content:
             application/json:
-              schema:
-                "$ref": "#/components/schemas/Token"
+              schema: {}
         '422':
           description: Validation Error
           content:
             application/json:
               schema:
                 "$ref": "#/components/schemas/HTTPValidationError"
+  "/api/token/refresh":
+    post:
+      summary: Refresh Token
+      operationId: refresh_token_api_token_refresh_post
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema: {}
   "/api/register":
     post:
       summary: Register
@@ -271,6 +260,83 @@ paths:
         required: true
       responses:
         '201':
+          description: Successful Response
+          content:
+            application/json:
+              schema: {}
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/HTTPValidationError"
+  "/api/logout":
+    post:
+      summary: Logout
+      operationId: logout_api_logout_post
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema: {}
+  "/api/username":
+    get:
+      summary: Get Username
+      operationId: get_username_api_username_get
+      parameters:
+      - name: access_token
+        in: cookie
+        required: false
+        schema:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Access Token
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema: {}
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/HTTPValidationError"
+  "/api/start_quiz":
+    get:
+      summary: Start Quiz
+      operationId: start_quiz_api_start_quiz_get
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema: {}
+  "/api/next_quiz":
+    post:
+      summary: Next Quiz
+      operationId: next_quiz_api_next_quiz_post
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema: {}
+  "/api/quiz":
+    post:
+      summary: Post Quiz
+      operationId: post_quiz_api_quiz_post
+      requestBody:
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              "$ref": "#/components/schemas/Body_post_quiz_api_quiz_post"
+        required: true
+      responses:
+        '200':
           description: Successful Response
           content:
             application/json:
@@ -316,7 +382,7 @@ components:
       - username
       - password
       title: Body_login_api_token_post
-    Body_post_quiz_quiz_post:
+    Body_post_quiz_api_quiz_post:
       properties:
         guess:
           type: string
@@ -324,7 +390,7 @@ components:
       type: object
       required:
       - guess
-      title: Body_post_quiz_quiz_post
+      title: Body_post_quiz_api_quiz_post
     HTTPValidationError:
       properties:
         detail:
@@ -372,24 +438,6 @@ components:
       - password
       title: RegisterRequest
       description: "Model for User\n    "
-    Token:
-      properties:
-        access_token:
-          type: string
-          title: Access Token
-        token_type:
-          type: string
-          title: Token Type
-      type: object
-      required:
-      - access_token
-      - token_type
-      title: Token
-      description: |-
-        _summary_
-
-        Args:
-            BaseModel (_type_): _description_
     ValidationError:
       properties:
         loc:
@@ -411,10 +459,3 @@ components:
       - msg
       - type
       title: ValidationError
-  securitySchemes:
-    OAuth2PasswordBearer:
-      type: oauth2
-      flows:
-        password:
-          scopes: {}
-          tokenUrl: "/api/token"
