# project/app/routes/highscores.py
@@ -4,12 +4,16 @@ Module highscores: Contains all backend routes that are highscore-related.
 from typing import List
 from fastapi import APIRouter, Cookie, HTTPException, Request, Depends
 import mysql
+import json
 
 from app.services.database_service import get_highscores, add_highscore, get_top_highscores, get_connection
-from app.services.auth_service import get_user_from_token, oauth2_scheme
+from app.services.auth_service import get_user_from_token
+from app.services.redis_service import get_redis_client
 from app.util.logger import get_logger
 from app.models.highscore_response import HighscoreResponse
 from app.models.user_in_db import UserInDb
+
+
 
 router = APIRouter()
 logger = get_logger("Highscore")
@@ -29,7 +33,8 @@ def get_current_user_from_cookie(token: str = Depends(get_token_from_cookie)) ->
         user = get_user_from_token(token, db_conn)
         return user
     finally:
-        db_conn.close()
+        if db_conn:
+            db_conn.close()
 
 @router.get("/api/highscores", response_model=List[HighscoreResponse])
 async def get_all_highscores(user: UserInDb = Depends(get_current_user_from_cookie)):
@@ -52,7 +57,8 @@ async def get_all_highscores(user: UserInDb = Depends(get_current_user_from_cook
     except mysql.connector.Error as e:
         raise HTTPException(status_code=500, detail=str(e)) from e
     finally:
-        db_conn.close()
+        if db_conn:
+            db_conn.close()
 
 
 @router.get("/api/highscore/{top}", response_model=List[HighscoreResponse])
@@ -85,30 +91,45 @@ async def get_top_highscores_api(
 
 
 @router.post("/api/highscore")
-async def post_highscore(request: Request, user: UserInDb = Depends(get_current_user_from_cookie)):
-    """_summary_
+async def post_highscore(
+    request: Request,
+    user: UserInDb = Depends(get_current_user_from_cookie),
+):
+    redis = get_redis_client()
+    session_id = request.cookies.get("quiz_session_id")
 
-    Args:
-        request (Request): _description_
-        token (str, optional): _description_. Defaults to Depends(oauth2_scheme).
+    if session_id is None:
+        logger.warn("No session id.")
+        raise HTTPException(status_code=400, detail="Session ID missing")
 
-    Raises:
-        HTTPException: _description_
-        HTTPException: _description_
+    redis_key = f"quiz:{session_id}"
+    json_data = redis.get(redis_key)
+    if json_data is None:
+        logger.warn("No quiz data found.")
+        raise HTTPException(status_code=400, detail="No quiz data found")
 
-    Returns:
-        _type_: _description_
-    """
-    obj = await request.json()
+    data = json.loads(json_data)
+    score = data.get("score")
+    if score is None:
+        logger.warn("No score found in quiz data.")
+        raise HTTPException(status_code=400, detail="No score found")
+
+    score = int(score)
+
     db_conn = None
     try:
         db_conn = get_connection()
-        highscore_data = add_highscore(db_conn, user.username, obj['score'])
+        logger.info(f"Storing highscore for {user.username}: {score}")
+        highscore_data = add_highscore(db_conn, user.username, score)
+
+        # Reset score in Redis
+        redis.set(redis_key, 0)
+
         return highscore_data
     except ValueError as ve:
         raise HTTPException(status_code=404, detail=str(ve)) from ve
     except mysql.connector.Error as e:
-        raise HTTPException(
-            status_code=500, detail="Internal server error") from e
+        raise HTTPException(status_code=500, detail="Internal server error") from e
     finally:
-        db_conn.close()
+        if db_conn:
+            db_conn.close()
